--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
+    "framer-motion": "^11.2.2",
+    "heroicons": "^2.1.3",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
